--- a/over-under-splitting-analysis.ipynb
+++ b/over-under-splitting-analysis.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# over- and under-splitting analysis of snmC2T-seq\n",
     "\n",
-    "### Fangming Xie, updated on 5/11/2020\n",
-    "\n",
+    "Fangming Xie, updated on 5/11/2020\n",
     "\n",
     "In this notebook, we examplify how one can evaluate the level of over- and under-splitting of a given clustering, by taking advantage of a single-cell multi-modal sequencing dataset--snmC2T-seq.\n",
     "\n",
